Border and margin style changed

--- a/style.css
+++ b/style.css
@@ -304,8 +304,8 @@
 
   .project-img {
     width: 39vw;
-    height: 22vw;
-    margin-bottom: 2vw;
+    height: 21vw;
+    margin-bottom: 5vw;
   }
 
   .project-description > p {
@@ -336,6 +336,7 @@
     font-weight: bold;
     font-size: 20px;
     transition: 0.6s ease;
+    border-width: 0vw;
     border-radius: 0 3px 3px 0;
     user-select: none;
     text-decoration: none;
