--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@
  }
 
  header {
-   margin-top: 10vw;
+   margin-top: 10%;
    display: flex;
  }
 
@@ -215,13 +215,13 @@
    display: block;
    position: absolute;
    width: 100%;
-   margin: 5vw auto;
+   margin: 5% auto;
  }
 
  .typing-demo {
    margin: auto;
    width: 22vw;
-   margin-top: 2vw;
+   margin-top: 2%;
    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
    white-space: nowrap;
    overflow: hidden;
@@ -241,10 +241,10 @@
  }
 
  section>div {
-   padding: 6vw 0.5vw 0.5vw 0.5vw;
+   padding: 6% 0.5% 0.5% 0.5%;
    width: 60vw;
    display: block;
-   margin: 0 auto 7.5vw auto;
+   margin: 0 auto 7.5% auto;
  }
 
  section>div:hover {
@@ -264,7 +264,7 @@
        #7f2611,
        #8c482c,
        #f48025);
-   margin: 5vw auto;
+   margin: 5% auto;
    opacity: 0.5;
  }
 
@@ -286,7 +286,7 @@
    display: block;
    font-size: 1.5vw;
    text-indent: 0;
-   margin: 1.5vw auto;
+   margin: 1.5% auto;
  }
 
  #about-me>p:last-of-type {
@@ -309,12 +309,12 @@
  .project-img {
    width: 39vw;
    height: 21vw;
-   margin-bottom: 5vw;
+   margin-bottom: 5%;
  }
 
  .project-description>p {
    text-indent: 0;
-   margin-top: 1vw;
+   margin-top: 1%;
    width: 45vw;
    font-size: 1.4vw;
    font-family: 'Judson', serif;
@@ -337,7 +337,7 @@
    color: white;
    position: relative;
    padding: 1vw;
-   margin: 0 0.5vw;
+   margin: 0 0.5%;
    font-weight: bold;
    font-size: 20px;
    transition: 0.6s ease;
@@ -381,7 +381,7 @@
    bottom: 10vw;
    left: 90vw;
    padding: 0.3vw;
-   margin: 0 0 0 0.45vw;
+   margin: 0 0 0 0.45%;
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    backface-visibility: hidden;
@@ -413,7 +413,7 @@
  #contacts>h3 {
    text-align: center;
    text-indent: 0;
-   margin-bottom: 2vw;
+   margin-bottom: 2%;
    font-size: 2vw;
  }
 
@@ -522,7 +522,7 @@
    }
 
    nav {
-     margin-top: 35vw;
+     margin-top: 35%;
    }
 
    nav>ul {
@@ -557,7 +557,7 @@
    .project-img {
      width: 57.15vw;
      height: 32.25vw;
-     margin-bottom: 15vw;
+     margin-bottom: 15%;
    }
 
    .project-description>p {
@@ -567,7 +567,7 @@
 
    #my-work {
      width: 85vw;
-     margin-bottom: 40vw;
+     margin-bottom: 40%;
    }
 
    #about-me {
@@ -579,29 +579,29 @@
      left: 90.5vw;
      border-width: 0 0.5vw 0.5vw 0;
      position: fixed;
-     margin-bottom: 30vh;
+     margin-bottom: 30%;
    }
 
    .scroll-up:first-of-type {
      padding: 1vw;
      border-width: 0 1vw 1vw 0;
      position: fixed;
-     margin-bottom: 30vh;
+     margin-bottom: 30%;
    }
 
    #contacts>h3 {
      font-size: 2.5vw;
-     margin-bottom: 1.5vw;
+     margin-bottom: 1.5%;
    }
  }
 
  @media only screen and (min-width: 769px) and (max-width: 1000px) {
    section>div {
-     margin-bottom: 5vw;
+     margin-bottom: 5%;
    }
 
    #my-work {
-    margin-bottom: 12.5vw;
+    margin-bottom: 12.5%;
    }
 
    .project-description>p {
@@ -609,7 +609,7 @@
    }
 
    #contacts>h3 {
-     margin-bottom: 0.5vw;
+     margin-bottom: 0.5%;
    }
 
    svg {
